--- a/src/Pages/Home/ShopByCategory/style.css
+++ b/src/Pages/Home/ShopByCategory/style.css
@@ -2,3 +2,9 @@
    border: none;
    border-radius: 5px;
 }
+@media only screen and (max-width: 600px) {
+   .card-side {
+      align-items: stretch;
+      flex-direction: column;
+  }
+ }
